--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="garamond">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 pb7-l">
-            <h1 class="mt0 ph3 f5 f4-ns near-white pt5 normal">Samuel Regan!</h1>
+            <h1 class="mt0 ph3 f5 f4-ns near-white pt5 normal fw1">Samuel Regan!</h1>
             <h2 class=" pl3 pt5 f5 f4-ns normal">Albums</h2>
             <div class="cf mh3 bt mt4">
                 <p class="fl">Stil de Grain</p>
