--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class=" pl3 pt5 f5 f4-ns normal">Albums</h2>
             <div class="cf mh3 bt mt4">
                 <p class="fl">Stil de Grain</p>
-                <p class="fr courier athelas-ns"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
+                <p class="fr courier fw1"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
             <div class="cf mh3 bt">
                 <p class="fl">Untitled (with Ben Hill)</p>
