--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 </style>
 
-<body class="garamond">
+<body class="garamond" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 pb7-l">
             <h1 class="mt0 ph3 f5 f4-ns near-white pt5 normal fw1">Samuel Regan!</h1>
