--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
         <h2 class=" pl2 pt5 f5 f4-ns normal mw7 center mb4">Photography</h2>
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/010_001.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/010_001.jpg" alt="image">
+                <img class="db w-100" src="/uploads/010_001.jpg">
+            </a>
+            <a href="/uploads/010_005.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/010_005.jpg">
             </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/010_001.jpg"></a>
-            <a href="" class="no-underline pv2 grow db"><img class="db w-100" src="/uploads/010_005.jpg"></a>
-            <a href="#" class="no-underline pv2 grow db"><img class="db w-100" src="/uploads/012_007.jpg" /></a>
+            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/010_005.jpg"></a>
+            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/012_007.jpg" /></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7765_010.jpg"></a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
