--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
             <a href="/uploads/010_005.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/010_005.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/010_001.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/010_005.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/012_007.jpg" /></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7765_010.jpg"></a>
+            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/012_007.jpg">
+            </a>
+            <a href="/uploads/7765_010.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/7765_010.jpg">
+            </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7766_013.jpg"></a>
