--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="lib/jquery-2.1.0.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
 
-<body class="garamond near-white" style="-webkit-font-smoothing: antialiased;">
+<body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 pb7-l">
             <h1 class="mt0 ph3 f5 f4-ns near-white pt5 normal">Samuel Regan!</h1>
