--- a/index.html
+++ b/index.html
@@ -36,18 +36,16 @@
         
         <h2 class=" pl2 pt5 f5 f4-ns normal mw7 center mb4">Photography</h2>
         <div class="fl w-100 w-50-ns ph2">
-            <a href="/uploads//uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/unnamed-1.jpg">
-            </a>
             <a href="/uploads/010_001.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/010_001.jpg">
-            </a>
-            <a href="/uploads/010_005.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/010_005.jpg">
             </a>
             <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
             </a>
+            <a href="/uploads//uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/unnamed-1.jpg">
+            </a>
+            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Fuji400_005.jpg"></a>
             <a href="/uploads/7765_010.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
@@ -69,8 +67,9 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/for%20instagram%2011.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Fuji400_005.jpg"></a>
-        </div>
+<a href="/uploads/010_005.jpg" class="pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/010_005.jpg">
+            </a>        </div>
     </main>
 </body>
 <script type="text/javascript">
