--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
     </section>
 
     <main class="cf pa2">
-        
+
         <h2 class=" pl2 pt5 f5 f4-ns normal mw7 center mb4">Photography</h2>
         <div class="fl w-100 w-50-ns ph2">
-                        <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7766_013.jpg"></a>
-<a href="/uploads//uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
+            <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/7766_013.jpg">
+            </a>
+            <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/unnamed-1.jpg">
             </a>
-            <a href="https://lh4.googleusercontent.com/gWHlNit5fqPbdAMg_yUGHvYxpkzje_ZYjDwROU5hlubsaLdDJRoYvo6PkkoxbMo9hYZDC3BvSlUw0hg=w1280-h676-rw
-" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="https://lh4.googleusercontent.com/gWHlNit5fqPbdAMg_yUGHvYxpkzje_ZYjDwROU5hlubsaLdDJRoYvo6PkkoxbMo9hYZDC3BvSlUw0hg=w1280-h676-rw
-">
+            <a href="/uploads/fords.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/fords.jpg">
             </a>
             <a href="/uploads/010_001.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/010_001.jpg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-             <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
+            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
             </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Fuji400_005.jpg"></a>
@@ -72,9 +72,10 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/for%20instagram%2011.jpg"></a>
-<a href="/uploads/010_005.jpg" class="pv2 grow db no-underline black">
+            <a href="/uploads/010_005.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/010_005.jpg">
-            </a>        </div>
+            </a>
+        </div>
     </main>
 </body>
 <script type="text/javascript">
