--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main class="cf pa2">
 
-        <h2 class=" pl2 pt5 f5 f4-ns f3-l normal mw7 center mb4">Photography</h2>
+        <h2 class=" pl2 pl3-l pt5 f5 f4-ns f3-l normal mw7 center mb4">Photography</h2>
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7766_013.jpg">
