--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 pb7-l">
-            <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Samuel Regan!</h1>
+            <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Samuel Regan</h1>
             <h2 class=" pl3 pt5 f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf mh3 bt mt4">
                 <p class="fl">Stil de Grain</p>
