--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/012_007.jpg" class="pv2 grow db no-underline black">
+            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
             </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Fuji400_005.jpg"></a>
@@ -65,7 +65,9 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7975_027.jpg"></a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/amy%20in%20the%20forest%20.jpg"></a>
+            <a href="/uploads/amy%20in%20the%20forest%20.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/amy%20in%20the%20forest%20.jpg">
+            </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207765_011.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7978_006.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
