--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Fuji400_005.jpg"></a>
+            <a href="/uploads/Fuji400_005.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/Fuji400_005.jpg">
+            </a>
             <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
