--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-    
+
     <h2 class=" pl3 pl3-ns pl4-l pt5 f5 f4-ns f3-l normal mw7 center mb4">Photography</h2>
     <main class="cf pa2 pa3-ns">
         <div class="fl w-100 w-50-ns ph2">
@@ -80,6 +80,10 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
         </div>
     </main>
+    <footer class="bg-near-black near-white">
+        
+    </footer>
+
 </body>
 <script type="text/javascript">
     ;
