--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <div class="mw7 center pb6">
             <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Samuel Regan</h1>
             <h2 class=" pl3 pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
-            <div class="cf mh3 bt mt4">
+            <div class="cf mh3 bt mt4"> 
+                <p class="fl">Similarity</p>
+                <p class="fr courier"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
+            </div>
+            <div class="cf mh3 bt">
                 <p class="fl">Stil de Grain</p>
                 <p class="fr courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
