--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Samuel Regan</h1>
             <h2 class=" pl3 pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf mh3 bt mt4"> 
-                <p class="fl">Similarity</p>
+                <a class="fl link near-white hover-blue" href="">Similarity</a>
                 <p class="fr courier"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
             <div class="cf mh3 bt">
