--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
             <div class="cf mh3 bt">
-                <p class="fl">Stil de Grain</p>
-                <p class="fr courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
+                <p class="fl f4-l">Stil de Grain</p>
+                <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
             <div class="cf mh3 bt">
-                <p class="fl">Untitled (with Ben Hill)</p>
-                <p class="fr courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
+                <p class="fl f4-l">Untitled (with Ben Hill)</p>
+                <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf mh3 bt">
-                <p class="fl">A Warm Room</p>
-                <p class="fr courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
+                <p class="fl f4-l">A Warm Room</p>
+                <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf mh3 bt">
-                <p class="fl">Ides</p>
-                <p class="fr courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
+                <p class="fl f4-l">Ides</p>
+                <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
         </div>
     </section>
