--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6">
             <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Samuel Regan</h1>
+            <p class="mt0 ph3 f5 f4-ns f3-l pt5 fr">Contact</p>
             <h2 class=" pl3 pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf mh3 bt mt4"> 
                 <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity</a></p>
