--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6">
+        <div class="mw7 center pb6 cf">
             <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal fl">Samuel Regan</h1>
             <p class="mt0 ph3 f5 f4-ns f3-l pt5 fr">Contact</p>
             <h2 class=" pl3 pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
