--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6 cf">
-            <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal fl i">Samuel Regan</h1>
-            <p class="mt0 ph3 f5 f4-ns f3-l pt5 fr">Contact</p>
+        <div class="mw7 center pb6">
+            <div class="cf">
+                <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal fl i">Samuel Regan</h1>
+                <p class="mt0 ph3 f5 f4-ns f3-l pt5 fr">Contact</p>
+            </div>
             <h2 class=" pl3 pt5 pt7-l f5 f4-ns f3-l normal">Albums</h2>
-            <div class="cf mh3 bt mt4"> 
+            <div class="cf mh3 bt mt4">
                 <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity</a></p>
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
