--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6">
+        <div class="mw7 center pb6 ph3">
             <div class="cf pt4 pt5-ns">
-                <h1 class="mt0 ml3 bg-green f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
-                <p class="mt0 ph3 f5 f4-ns f3-l fr">Contact</p>
+                <h1 class="mt0 bg-green f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
+                <p class="mt0 f5 f4-ns f3-l fr">Contact</p>
             </div>
-            <h2 class=" pl3 pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
-            <div class="cf mh3 bt mt4">
+            <h2 class="pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
+            <div class="cf bt mt4">
                 <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity</a></p>
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
-            <div class="cf mh3 bt">
+            <div class="cf bt">
                 <p class="fl f4-l">Stil de Grain</p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
-            <div class="cf mh3 bt">
+            <div class="cf bt">
                 <p class="fl f4-l">Untitled (with Ben Hill)</p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
-            <div class="cf mh3 bt">
+            <div class="cf bt">
                 <p class="fl f4-l">A Warm Room</p>
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
-            <div class="cf mh3 bt">
+            <div class="cf bt">
                 <p class="fl f4-l">Ides</p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
