--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 ph3">
             <div class="cf pt4 pt5-ns">
-                <h1 class="mt0 bg-green f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
+                <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr">Contact</p>
             </div>
             <h2 class="pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
