--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6 ph3">
+        <div class="mw7 center pb6 ph3 ph4-ns">
             <div class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr">Contact</p>
