--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script src="lib/jquery-2.1.0.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
+    <style>@media screen and (min-width: 60em) {.bg-blue-l{background-color:#0000EE;}}</style>
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
