--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6 ph3 ph5-ns ph0-l bg-greeen bg-bluue-l">
+        <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
             <div class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr">Contact</p>
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <h2 class=" pl3 pl3-ns pl4-l pt5 f5 f4-ns f3-l normal mw7 center mb4">Photography</h2>
+    <h2 class="pt5 f5 f4-ns f3-l normal mw7 center ph3 ph5-ns ph0-l mb4">Photography</h2>
     <main class="cf pa2 pa3-ns mb6">
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
