--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <h2 class="pt5 f5 f4-ns f3-l normal mw7 center ph3 ph5-ns ph0-l mb4">Photography</h2>
+    <h2 class="f5 f4-ns f3-l mw7 center mb4 ph3 ph5-ns ph0-l pt5">Photography</h2>
     <main class="cf pa2 pa3-ns mb6">
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
