--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
 <script src="lib/jquery-2.1.0.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
-    <style>@media screen and (min-width: 60em) {.bg-blue-l{background-color:#0000EE;}}</style>
+<style>
+    @media screen and (min-width: 60em) {
+        .bg-blue-l {
+            background-color: #0000EE;
+        }
+    }
+
+</style>
 
 <body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
@@ -40,7 +47,9 @@
         </div>
     </section>
 
-    <h2 class="f5 f4-ns f3-l mw7 center mb4 ph3 ph5-ns ph0-l pt5">Photography</h2>
+    <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
+        <h2 class="f5 f4-ns f3-l mb4 normal pt5">Photography</h2>
+    </div>
     <main class="cf pa2 pa3-ns mb6">
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
