--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </section>
 
-    <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
-        <h2 class="f5 f4-ns f3-l normal pt5">Photography</h2>
+    <div class="mw7 center ph3 ph5-ns ph0-l">
+        <h2 class="f5 f4-ns f3-l mb4 normal pt5">Photography</h2>
     </div>
     <main class="cf pa2 pa3-ns mb6">
         <div class="fl w-100 w-50-ns ph2">
