--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
     </main>
     <footer class="bg-near-black near-white">
-        <div class="mw7 center pb4">
-            <h1 class="mt0 ph3 f5 f4-ns f3-l near-white pt5 normal">Contact</h1>
+        <div class="mw7 center pb4 ph3 ph5-ns ph0-l">
+            <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal">Contact</h1>
             <p>Something something, hello, hi. Photography. Hire me to take your photos. samueldregan@gmail.com</p>
         </div>
     </footer>
