--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 <p class="fl f4-l">Ides</p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
+            <h3 class="pt5 pt6-l f5 f4-ns f3-l normal">Collaborations</h3>
+            <div class="cf bt mt4">
+                <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity</a></p>
+                <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
+            </div>
         </div>
     </section>
 
