--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="pt5 pt6-l f5 f4-ns f3-l normal">Collaborations</h3>
             <div class="cf bt">
                 <p class="fl f4-l">Askew</p>
-                <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Full-length Album Forthcoming</span></p>
+                <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
                 <p class="fl f4-l">Untitled (with Ben Hill)</p>
