--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p class="fl f4-l">Stil de Grain</p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
-            <h3 class="pt5 pt6-l f5 f4-ns f3-l normal">Collaborations</h3>
+            <h3 class="pt5 f5 f4-ns f3-l normal">Collaborations</h3>
             <div class="cf bt">
                 <p class="fl f4-l">Askew</p>
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
