--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l">Untitled (with Ben Hill)</p>
+                <p class="fl f4-l">Untitled</p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
