--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </style>
 
-<body class="garamond bg-near-white" style="-webkit-font-smoothing: antialiased;">
+<body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
             <div class="cf pt4 pt5-ns">
