--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity - Self-titled</a></p>
+                <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity&mdash;Self-titled</a></p>
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
         </div>
