--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
                 <p class="fl f4-l">Stil de Grain</p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
+
             <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
             <div class="cf bt">
                 <p class="fl f4-l">Askew</p>
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l">Benjamin Hill &amp; Samuel<br>Regan&mdash;Untitled</p>
+                <p class="fl f4-l">Ben<span class="dn dib-ns">jamin</span> Hill &amp; Sam<span class="dn dib-ns">uel</span> Regan<br class="dn-ns">&mdash;Untitled</p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
@@ -74,7 +75,7 @@
             <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
             </a>
-            
+
             <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
@@ -94,7 +95,7 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/for%20instagram%2011.jpg"></a>
-            
+
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
         </div>
     </main>
