--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <footer class="bg-near-black near-white">
         <div class="mw7 center pb4 ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal">Contact</h1>
-            <p>Something something, hello, hi. Photography. Hire me to take your photos. samueldregan@gmail.com</p>
+            <p>I am currently available for photography work. You can reach me at samueldregan@gmail.com or follow me on <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a>.</p>
         </div>
     </footer>
 
