--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     </main>
     <footer class="bg-near-black near-white">
         <div class="mw7 center pb4 ph3 ph5-ns ph0-l">
-            <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal">Contact</h1>
-            <p>I am currently available for photography work. You can reach me at samueldregan@gmail.com or follow me on <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a>.</p>
+            <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal i">Contact</h1>
+            <p class="lh-copy">I am currently available for photography work. You can reach me at samueldregan@gmail.com or follow me on <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a>.</p>
         </div>
     </footer>
 
