--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
             <div class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
-                <p class="mt0 f5 f4-ns f3-l fr">Contact</p>
+                <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white" href="#contact">Contact</a></p>
             </div>
             <h2 class="pt5 pt6-l f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf bt">
@@ -99,7 +99,7 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
         </div>
     </main>
-    <footer class="bg-near-black near-white">
+    <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb5 ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal i">Contact</h1>
             <p class="lh-copy">I am currently available for photography work. You can reach me at samueldregan@gmail.com or follow me on <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a></p>
