--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="mw7 center pb5 ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal i">Contact</h1>
             <p class="lh-copy">I am currently available for photography work. You can reach me at samueldregan@gmail.com or follow me on <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a></p>
-            <p class="lh-copy f6 mt4 courier">Site designed and built by <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
+            <p class="lh-copy f6-ns mt4 courier">Site designed and built by <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
         </div>
     </footer>
 
