--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l">Ben<span class="dn dib-l">jamin</span> Hill &amp; Sam<span class="dn dib-l">uel</span> Regan<br class="dn-l">&mdash;Untitled</p>
+                <p class="fl f4-l">Ben<span class="dn dib-l">jamin</span> Hill &amp; Sam<span class="dn dib-l">uel</span> Regan
+                    <br class="dn-l">&mdash;Untitled</p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
@@ -72,14 +73,13 @@
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/012_007.jpg">
-            </a>
-
+            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_009.jpg"></a>
             <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_009.jpg"></a>
+            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/012_007.jpg">
+            </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_028.jpg"> </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_034.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7837_017.jpg"></a>
