--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb5 ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 normal i">Contact</h1>
-            <p class="lh-copy f4">For photography inquiries or just to chat: samueldregan@gmail.com / <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a></p>
+            <p class="lh-copy f4-ns">For photography inquiries or just to chat: samueldregan@gmail.com / <a class="near-white" href="https://www.instagram.com/samuel_regan">Instagram</a></p>
             <p class="lh-copy f6-ns mt4 courier bt pt4 ">Site designed and built by <a class="near-white" href="http://tylernford.com">@tylernford</a></p>
         </div>
     </footer>
