--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
-        <div class="mw7 center pb6 ph3 ph5-ns ph0-l">
+        <div class="mw7 center pb5 pb6-l ph3 ph5-ns ph0-l">
             <div class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white" href="#contact">Contact</a></p>
@@ -55,9 +55,9 @@
     </section>
 
     <div class="mw7 center ph3 ph5-ns ph0-l">
-        <h2 class="f5 f4-ns f3-l mb3 normal pt6">Photography</h2>
+        <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-l">Photography</h2>
     </div>
-    <main class="cf pa2 pa3-ns mb6">
+    <main class="cf pa2 pa3-ns mb5 mb6-l">
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7766_013.jpg">
@@ -101,7 +101,7 @@
     </main>
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb5 ph3 ph5-ns ph0-l">
-            <h1 class="mt0 f5 f4-ns f3-l near-white pt6 normal i">Contact</h1>
+            <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
             <p class="lh-copy f4-ns">For photography inquiries or just to chat: <a class="near-white" href="mailto:samueldregan@gmail.com">samueldregan@gmail.com</a> / <a class="near-white" href="https://www.instagram.com/samuel_regan">instagram</a></p>
             <p class="lh-copy f6-l mt4 courier bt pt4 ">Site designed and built by <a class="near-white" href="http://tylernford.com">@tylernford</a></p>
         </div>
