--- a/index.html
+++ b/index.html
@@ -99,6 +99,28 @@
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
         </div>
     </main>
+
+    <div class="mw7 center ph3 ph5-ns ph0-l">
+        <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
+    </div>
+    <main class="cf pa2 pa3-ns mb5 mb6-ns">
+        <div class="fl w-100 w-50-ns ph2">
+            <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/7766_013.jpg">
+            </a>
+            <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/unnamed-1.jpg">
+            </a>
+        </div>
+        <div class="fl w-50 w-25-ns ph2">
+            <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/7765_010.jpg">
+            </a>
+            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/012_007.jpg">
+            </a>
+        </div>
+    </main>
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
