--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
     </div>
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
         <div class="fl w-100 w-50-ns ph2">
-            <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/7766_013.jpg">
+            <a href="/1.jpeg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/1.jpeg">
             </a>
-            <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/unnamed-1.jpg">
+            <a href="/2.jpeg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/2.jpeg">
             </a>
         </div>
         <div class="fl w-100 w-50-ns ph2">
-            <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/7765_010.jpg">
+            <a href="/3.jpeg" class="pv2 grow db no-underline black">
+                <img class="db w-100" src="/3.jpeg">
             </a>
-            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/012_007.jpg">
+            <a href="/4.jpeg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/4.jpeg">
             </a>
         </div>
     </main>
