--- a/index.html
+++ b/index.html
@@ -104,18 +104,22 @@
         <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
     </div>
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
-        <div class="fl w-100 w-50-ns ph2">
+        <div class="fl w-50 w-25-ns ph2">
             <a href="/uploads/1.jpeg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/1.jpeg">
             </a>
+        </div>
+        <div class="fl w-50 w-25-ns ph2">
             <a href="/uploads/2.jpeg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/2.jpeg">
             </a>
         </div>
-        <div class="fl w-100 w-50-ns ph2">
+        <div class="fl w-50 w-25-ns ph2">
             <a href="/uploads/3.jpeg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/3.jpeg">
             </a>
+        </div>
+        <div class="fl w-50 w-25-ns ph2">
             <a href="/uploads/4.jpeg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/4.jpeg">
             </a>
