--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/4.jpeg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/4.jpeg">
+            <a href="/uploads/5.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/uploads/5.jpg">
             </a>
         </div>
     </main>
