--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
             <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+                <p class="fl f4-l"><a class="link near-white hover-washed-green" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                <p class="fl f4-l"><a class="link near-white hover-washed-blue" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf bt">
