--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white hover-lightest-blue" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                <p class="fl f4-l"><a class="link near-white hover-light-red" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf bt">
