--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+                <p class="fl f4-l"><a class="link near-white over-light-yellow" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
 
