--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
             <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white hover-washed-red" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white hover-light-red" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf bt">
@@ -43,11 +43,12 @@
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l">Ben<span class="dn dib-l">jamin</span> Hill &amp; Sam<span class="dn dib-l">uel</span> Regan<br class="dn-l">&mdash;Untitled</p>
+                <p class="fl f4-l">Ben<span class="dn dib-l">jamin</span> Hill &amp; Sam<span class="dn dib-l">uel</span> Regan
+                    <br class="dn-l">&mdash;Untitled</p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white hover-blue" href="">Similarity&mdash;Self-titled</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
         </div>
