--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img class="db w-100" src="/uploads/fords.jpg">
             </a>
             <a href="/uploads/010_001.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/010_001.jpg">
+                <img class="db w-100" src="/uploads/010_001-compressor.jpg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
