--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
         <div class="fl w-100 w-50-ns ph2">
             <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/7766_013.jpg">
+                <img class="db w-100" src="/social.png">
             </a>
             <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/unnamed-1.jpg">
