--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </div>
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
         <div class="fl w-100 w-50-ns ph2">
-            <a href="/uploads/7766_013.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/7766_013.jpg">
+            <a href="/photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="/photography/preview/1-preview.jpg">
             </a>
             <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/unnamed-1.jpg">
