--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
     </div>
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
         <div class="fl w-100 w-50-ns ph2">
-            <a href="/photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
+            <a href="photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/1-preview.jpg">
             </a>
-            <a href="/uploads/unnamed-1.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/unnamed-1.jpg">
+            <a href="photography/large/2-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/2-preview.jpg">
             </a>
-            <a href="/uploads/fords.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/fords.jpg">
+            <a href="photography/large/3-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/3-preview.jpg">
             </a>
-            <a href="/uploads/010_001.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/010_001-compressor.jpg">
+            <a href="photography/large/4-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/4-preview.jpg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_009.jpg"></a>
+            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="photography/preview/5-preview.jpg"></a>
             <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
