--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="photography/preview/5-preview.jpg"></a>
+            <a href="photography/large/5-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/5-preview.jpg">
+            </a>
             <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/7765_010.jpg">
             </a>
